[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://interactables/forest/BushInteractable.gd" id="1"]

[sub_resource type="RectangleShape2D" id="Shape"]
size = Vector2(64, 48)

[node name="BushInteractable" type="Area2D"]
script = ExtResource("1")
collision_layer = 4096
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("Shape")
position = Vector2(0, -24)

[node name="BushIdleSprite" type="AnimatedSprite2D" parent="."]
centered = false
position = Vector2(0, -48)

[node name="BushHighlightSprite" type="Sprite2D" parent="."]
centered = false
position = Vector2(0, -48)
visible = false

